<resources>
    <string name="app_name">DraculaDayByDay</string>
    <string name="title_entry_detail">Entry Detail</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_diary_entry_list">DiaryEntries</string>
    <string name="title_diary_entry_detail">DiaryEntry Detail</string>
    <string name="menu_filter_text">Filter</string>
    <string name="menu_sort_text">Sort</string>
    <string name="menu_preferences_text">Preferences</string>
    <string name="menu_about_text">About</string>
    <string name="filter_title">Filter settings:</string>
    <string name="sort_title">Sort settings:</string>
    <string name="filter_date_label">Date:</string>
    <string name="filter_on_date">On date </string>
    <string name="filter_before_date">Before date</string>
    <string name="filter_after_date">After date</string>
    <string name="filter_between_date_one">Between the</string>
    <string name="filter_between_date_two">and</string>
    <string name="filter_persons_label">Persons:</string>
    <string name="filter_types_label">Types:</string>
    <string name="filter_chapters_label">Chapters:</string>
    <string name="filter_read_label">Read:</string>
    <string name="sort_add">Add</string>
    <string name="sort_asc_description">Ascending order</string>
    <string name="sort_desc_description">Descending order</string>
    <string name="sort_remove">Remove</string>
    <string name="filter_cancel_button">Cancel</string>
    <string name="filter_ok_button">OK</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_user_interface">User Interface</string>
    <string name="pref_title_font_type">Font</string>
    <string-array name="pref_font_type_titles">
        <item>Droid Sans</item>
        <item>Droid Serif</item>
        <item>Droid Sans Mono</item>
        <item>Ravali</item>
        <item>Harrington</item>
        <item>Victorian</item>
        <item>Victorian with Initial</item>
    </string-array>
    <string name="pref_key_font_type">user_interface_pref_font</string>
    <string name="pref_summary_font_type">The font for the story is %s</string>
    <string name="pref_default_value_font_type">Victorian with Initial</string>
    <string name="pref_title_initial_type">Initial</string>
    <string-array name="pref_initial_type_entries">
        <item>Rediviva Zierbuchstaben</item>
        <item>Wieynk Fraktur Zier</item>
        <item>Preciosa</item>
    </string-array>
    <string name="pref_key_initial_type">user_interface_pref_initial</string>
    <string name="pref_summary_initial_type">The font initial is %s</string>
    <string name="pref_default_value_initial_type">Rediviva Zierbuchstaben</string>
    <string name="pref_title_text_fontsize">Font size</string>
    <string name="pref_summary_fontsize">The font size is %s</string>
    <string name="pref_key_fontsize">user_interface_pref_fontsize</string>
    <string name="pref_title_theme">Theme</string>
    <string-array name="pref_theme_titles">
        <item>Default</item>
    </string-array>
    <string name="pref_default_value_theme">Default</string>
    <string name="pref_summary_theme">The theme of the application is %s</string>
    <string name="pref_key_theme">user_interface_theme</string>
    <string name="pref_key_font_example">user_interface_pref_font_example</string>
    <string name="pref_title_font_example">Font Example:</string>
    <string name="pref_name_font_example">ShowFontExample</string>
    <string name="pref_entryview_sample_text">[d]3 May[/d] [l]Bistritz[/l] [c](Kept in shorthand)[/c] [e]Left Munich at 8:35 P. M., on 1st May, arriving at Vienna early next morning; should have arrived at 6:46, but train was an hour late.[/e]</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_key_new_message_notifications">notifications_new_message</string>
    <string name="pref_title_new_message_notifications">Notifications</string>
    <string name="pref_summary_new_message_notifications">Notify when new entries are unlocked</string>
    <string name="pref_key_light">notifications_new_entry_light</string>
    <string name="pref_title_light">Light</string>
    <string name="pref_summary_light">Show a flashing light when a new entry has been unlocked</string>
    <string name="pref_key_vibrate">notifications_new_entry_vibrate</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_summary_vibrate">Vibrate when a new entry has been unlocked</string>
    <string name="pref_time_for_notification_titles">Time for notification</string>
    <string name="pref_notification_set">Set</string>
    <string name="pref_notification_cancel">Cancel</string>
    <string name="pref_notification_interval_notification">In interval</string>
    <string name="pref_notification_set_time_notification">At set time</string>
    <string name="pref_notification_interval_from">From:</string>
    <string name="pref_notification_interval_to">To:</string>
    <string name="pref_notification_interval_at_time">At Time:</string>
    <string name="pref_notification_summary_setat">Notifications of new messages will happen at %s</string>
    <string name="pref_notification_summary_interval">Notifications will happen randomly between %% and %%</string>
    <string name="pref_title_notification">Set Time</string>
    <string name="pref_key_notification">notifications_when_to_notify</string>
    <string name="pref_summary_notification">Basic summary</string>
    <string name="pref_how_to_experience_title">How to experience the book</string>
    <string name="pref_experience_default_value">On the actual day</string>
    <string name="pref_summary_how_to_experience">You can either experience the book on calendar days it happened, or in the same tempo (with today being the first day)</string>
    <string-array name="list_preference_how_to_experience">
        <item>On the actual day</item>
        <item>In the same tempo</item>
    </string-array>
    <string name="pref_key_how_to_experience">experience_preference</string>
    <string name="pref_reset_book_dialog_message">Do you really want to reset the book to the beginning? This action cannot be undone</string>
    <string name="pref_reset_book_key">reset_book</string>
    <string name="pref_reset_book_summary">Click here to reset the book to the beginning</string>
    <string name="pref_reset_book_title">Reset the book</string>
    <string name="entry_view_default">This is the default text for an entry - if you are reading this, something has gone wrong in retrieving the relevant entry</string>
    <string name="pref_entryview_title_text">Title</string>
    <string name="pref_entryview_text">Preference EntryView default value</string>
    <string name="shared_pref_user_interface">SHARED_PREF_USER_INTERFACE</string>
    <string name="shared_pref_general">SHARED_PREF_GENERAL</string>
    <string name="shared_pref_notification">SHARED_PREF_NOTIFICATION</string>
    <string name="title_activity_about">About</string>
    <string name="news_type_default">The type of the entry</string>
    <string name="news_type_diary">Diary entry</string>
    <string name="news_type_letter">Letter</string>
    <string name="news_type_telegram">Telegram</string>
    <string name="news_type_phonograph">Phonograph</string>
    <string name="news_type_newspaper">Newspaper</string>
    <string name="news_type_note">Note</string>
    <string name="about_app_label">About the Dracula Day-by-Day:</string>
    <string name="about_app">Dracula Day-by-Day is an app that</string>
    <string name="about_resources_used_label">Resources used:</string>
    <string name="about_resources_used">
        Text based on <a href="https://www.gutenberg.org/ebooks/345">Bram Stoker\'s Dracula</a> from <a href="https://www.gutenberg.org/wiki/Main_Page">Project Gutenberg</a> used under the <a href="https://www.gutenberg.org/wiki/Gutenberg:The_Project_Gutenberg_License">The Project Gutenberg License</a>.\n\n
        <a href="https://thenounproject.com/kosmofish/collection/halloween/?i=600695">vampire fangs</a> by <a href="https://thenounproject.com/kosmofish/">Artem Kovyazin</a> from the <a href="https://thenounproject.com/">Noun Project</a>\n\n
        <a href="http://game-icons.net/delapouite/originals/vampire-dracula.html">Vampire Dracula icon</a> by <a href="http://delapouite.com/">Delapouite</a> from <a href="http://game-icons.net/">Game-Icons.net</a> under the <a href="https://creativecommons.org/licenses/by/3.0/">Attribution 3.0 Unported (CC BY 3.0)</a>\n\n
        <a href="http://game-icons.net/delapouite/originals/compact-disc.html">Compact Disc icon</a> by <a href="http://delapouite.com/">Delapouite</a> from <a href="http://game-icons.net/">Game-Icons.net</a> under the <a href="https://creativecommons.org/licenses/by/3.0/">Attribution 3.0 Unported (CC BY 3.0)</a>\n\n
        <a href="http://game-icons.net/lorc/originals/envelope.html">Envelope icon</a> by <a href="http://lorcblog.blogspot.dk/">Lorc</a> from <a href="http://game-icons.net/">Game-Icons.net</a> under the <a href="https://creativecommons.org/licenses/by/3.0/">Attribution 3.0 Unported (CC BY 3.0)</a>\n\n
        <a href="http://game-icons.net/lorc/originals/bookmarklet.html">Bookmarklet icon</a> by <a href="http://lorcblog.blogspot.dk/">Lorc</a> from <a href="http://game-icons.net/">Game-Icons.net</a> under the <a href="https://creativecommons.org/licenses/by/3.0/">Attribution 3.0 Unported (CC BY 3.0)</a>\n\n
        <a href="http://game-icons.net/lorc/originals/papers.html">Paper icon</a> by <a href="http://lorcblog.blogspot.dk/">Lorc</a> from <a href="http://game-icons.net/">Game-Icons.net</a> under the <a href="https://creativecommons.org/licenses/by/3.0/">Attribution 3.0 Unported (CC BY 3.0)</a>\n\n
        <a href="http://game-icons.net/lorc/originals/fountain-pen.html">Fountain pen icon</a> by <a href="http://lorcblog.blogspot.dk/">Lorc</a> from <a href="http://game-icons.net/">Game-Icons.net</a> under the <a href="https://creativecommons.org/licenses/by/3.0/">Attribution 3.0 Unported (CC BY 3.0)</a>\n\n
        <a href="http://game-icons.net/lorc/originals/folded-paper.html">Folded paper icon</a> by <a href="http://lorcblog.blogspot.dk/">Lorc</a> from <a href="http://game-icons.net/">Game-Icons.net</a> under the <a href="https://creativecommons.org/licenses/by/3.0/">Attribution 3.0 Unported (CC BY 3.0)</a>
        <a href="https://materialdesignicons.com/icon/filter">filter</a> by <a href="https://twitter.com/Templarian">Austion Andrews</a> from <a href="https://materialdesignicons.com/">Material Design Icons</a> under the <a href="https://github.com/Templarian/MaterialDesign/blob/master/license.txt">SIL Open Font License 1.1</a>
        <a href="https://materialdesignicons.com/icon/sort-ascending">sort-ascending</a> by <a href="https://twitter.com/Templarian">Austion Andrews</a> from <a href="https://materialdesignicons.com/">Material Design Icons</a> under the <a href="https://github.com/Templarian/MaterialDesign/blob/master/license.txt">SIL Open Font License 1.1</a>
        <a href="https://materialdesignicons.com/icon/sort-descending">sort-descending</a> by <a href="https://twitter.com/Templarian">Austion Andrews</a> from <a href="https://materialdesignicons.com/">Material Design Icons</a> under the <a href="https://github.com/Templarian/MaterialDesign/blob/master/license.txt">SIL Open Font License 1.1</a>
    </string>
    <string name="about_open_source_libraries_label">Open Source libraries used:</string>
    <string name="about_open_source_licences_label">Licenses used:</string>
</resources>