<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- When to show -->
    <com.jensen.draculadaybyday.preferences.HowToExperiencePreference
        android:id="@+id/how_to_experience"
        android:defaultValue="@string/pref_experience_default_value"
        android:key="@string/pref_key_how_to_experience"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_summary_how_to_experience"
        android:title="@string/pref_how_to_experience_title" />

    <!-- Reset the book experience -->
    <com.jensen.draculadaybyday.preferences.YesNoPreference
        android:dialogMessage="@string/pref_reset_book_dialog_message"
        android:key="@string/pref_reset_book_key"
        android:summary="@string/pref_reset_book_summary"
        android:title="@string/pref_reset_book_title" />

</PreferenceScreen>
