<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    >

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications"
        />

    <!-- Whether or not phone/tablet should vibrate when there is a notification -->
    <SwitchPreference
        android:id="@+id/notification_pref_id"
        android:defaultValue="false"
        android:dependency="notifications_new_message"
        android:key="@string/pref_key_vibrate"
        android:title="@string/pref_title_vibrate"
        />

    <com.jensen.draculadaybyday.Settings.NotificationTimePreference
        android:title="@string/pref_title_notification"
        android:summary="@string/pref_summary_notification"
        android:key="@string/pref_key_notification"
        android:defaultValue="@array/pref_default_notification_time"
        custom:setTime="@bool/pref_notification_setTime"
        />
</PreferenceScreen>
