<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="schemas.android.com/tools"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    tools:context="com.jensen.draculadaybyday.EntryListActivity">

    <item
        android:id="@+id/entry_list_filter"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="1"
        android:title="@string/menu_filter_text"
        yourapp:showAsAction="always" />

    <item
        android:id="@+id/entry_list_general_preferences"
        android:icon="@drawable/ic_preferences_black_24dp"
        android:orderInCategory="3"
        android:title="@string/menu_preferences_text"
        yourapp:showAsAction="always" />
    <item
        android:id="@+id/entry_list_about_app"
        android:icon="@drawable/ic_help_black_24dp"
        android:orderInCategory="4"
        android:title="@string/menu_about_text"
        yourapp:showAsAction="always" />
</menu>